--- a/services.html
+++ b/services.html
@@ -13,9 +13,9 @@
     <section>
       <h1>Services</h1>
       <!-- this is the container for the service previews -->
-      <div>
+      <div class="grid">
         <!-- this is a service preview which will be repeated in jekyll -->
-        <div class="bg-white">
+        <div class="col-4 bg-white">
           <div>
           <h4>Service 1 Title Here</h4>
           <a href="#service1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
@@ -29,11 +29,13 @@
         <!-- this is a service description which will be repeated in jekyll -->
         <div class="bg-white">
           <div>
-            <div>
-              <h4>Service 1 Title Here</h4>
-            </div>
-            <div>
-              <h3 class="price">$200-500</h3>
+            <div class="grid-spaceBetween">
+              <div>
+                <h4 id="service1">Service 1 Title Here</h4>
+              </div>
+              <div>
+                <h3 class="price">$200-500</h3>
+              </div>
             </div>
             <div>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
