--- a/services.html
+++ b/services.html
@@ -11,14 +11,14 @@
 </head>
   <body>
     <section>
-      <h1>Services</h1>
+      <h1 class="text-big">Services</h1>
       <!-- this is the container for the service previews -->
       <div class="grid">
         <!-- this is a service preview which will be repeated in jekyll -->
         <div class="col-4 bg-white">
           <div>
           <h4>Service 1 Title Here</h4>
-          <a href="#service1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+          <a href="#service1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
@@ -46,6 +46,6 @@
       </div>
     </section>
     <section>
-      <h2>Not quite ready to make a commitment?</h2>
+      <h2 class="text-medium">Not quite ready to make a commitment?</h2>
       <p>That’s ok, let’s get to know each other first. You can find tons of useful (and FREE) resources in the blog.</p>
       <a href=""><button class="button-main">learn for free</button></a>
