--- a/landingpage.html
+++ b/landingpage.html
@@ -4,7 +4,7 @@
     <!-- these are style links which will be reused in jekyll -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto|Roboto+Slab:300,400" rel="stylesheet">
     <script src="https://use.fontawesome.com/97eb518d07.js"></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -25,12 +25,12 @@
       <h1>Title of case study with awesome client</h1>
       <div class="grid">
         <div class="col-6_sm-12 bg-white">
-          <p>This is a tagline
+          <p>This is a tagline</p>
             <ul>
               <li>this is a descriptive bullet point</li>
               <li>people love bullet points</li>
               <li>give the people all the bullet points</li></ul>
-            What are you waiting for? Buy the things.</p>
+            <p>What are you waiting for? Buy the things.</p>
         </div>
         <div class="col-6_sm-12 bg-bright">
           <h5>download the case study</h5>
