spacing and alignment
fixed spacing and alignment and padding. added/fixed bg colors. redid button hover anims.

--- a/landingpage.html
+++ b/landingpage.html
@@ -13,10 +13,10 @@
     <!-- this is my landing page header and simplified nav which will be reused in jekyll -->
     <header>
       <nav class="grid-spaceBetween-middle bg-white">
-        <div class="col-2_sm-12">
+        <div class="col-2_sm-12 text-center">
           <img src"" alt="knowitall logo">
         </div>
-        <div class="col-1_sm-12">
+        <div class="col-1_sm-12 text-center">
           <a href="#contact">contact</a>
         </div>
       </nav>
@@ -33,8 +33,8 @@
             <p>What are you waiting for? Buy the things.</p>
         </div>
         <div class="col-6_sm-12 bg-bright">
-          <h5>download the case study</h5>
-          <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
+          <h5 class="text-center">download the case study</h5>
+          <form class="grid-spaceAround  pad-all-s" method="POST" action="http://formspree.io/busababruns@gmail.com">
             <div class="col-6_sm-12 grid">
               <label class="col-12" for="name">First Name</label>
               <input type="text" name="firstname" id="name" placeholder=" Harry">
