--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- these are style links which will be reused in jekyll -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto|Roboto+Slab:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto:300,400|Roboto+Slab:300,400,700" rel="stylesheet">
     <script src="https://use.fontawesome.com/97eb518d07.js"></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -13,10 +13,10 @@
     <!-- this is my header and nav which will be reused in jekyll -->
     <header>
       <nav class="grid-spaceBetween-middle bg-white">
-        <div class="col-2_sm-12">
+        <div class="col-2_sm-12 text-center">
           <img src"" alt="knowitall logo">
         </div>
-        <div class="col-4_sm-12">
+        <div class="col-3_sm-12 text-center">
           <a href="services.html">services</a>
           <a href="blog.html">blog</a>
           <a href="index.html/#contact">contact</a>
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <!-- this is my introduction section with calls to action -->
-    <section class="hero">
+    <section class="hero pad-top-m">
       <!-- the conatiner below contains my hero elements and will be used again but flipped in the testimonials section -->
       <div class="grid-middle box-on-top">
         <!-- this is the contianer for the white box and buttons -->
@@ -35,9 +35,9 @@
             <h6>Happy teams have the know-how and resources to stay on the same page and work in sync.</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <!-- these are the buttons which are meant to midline at the bottom of the container above -->
-            <div>
-              <a href="blog.html"><button class="button-main">learn for free</button></a>
-              <a href="services.html"><button class="button-main">hire me</button></a>
+            <div class="text-center">
+              <a href="blog.html"><button class="button-main transition-ease">learn for free</button></a>
+              <a href="services.html"><button class="button-main transition-ease">hire me</button></a>
             </div>
           </div>
         </div>
@@ -49,9 +49,9 @@
     </section>
     <!-- this is my definition of knowledge management section -->
     <section class="whatiskm">
-      <h2>What is knowledge management?</h2>
-      <div class="bg-dark">
-        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="text-center">What is knowledge management?</h2>
+      <div class="bg-dark pad-all-s">
+        <p class="text-white text-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </section>
     <!-- this is my recent articles section which will have previews and links to the blog -->
@@ -63,10 +63,12 @@
         <div class="col-4_sm-12 bg-white">
           <img src="" alt="blog post image">
           <div>
-          <h4>Blog post title which will probably be quite long like this.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h4>Blog post title which will probably be quite long like this.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
-          <a href="#"><button class="button-main">read more</button></a>
+          <div class="text-center">
+            <a href="#"><button class="button-main transition-ease ">read more</button></a>
+          </div>
         </div>
       </div>
     </section>
@@ -75,7 +77,7 @@
       <h3>services</h3>
       <!-- this is the container for the list of services -->
       <div class="bg-white">
-        <!-- this is one item on the list of services which will be repeated with jekyll -->
+        <!-- this is one item on the list of services which will be repeated with jekyll - ACCORDIAN? -->
         <div>
           <h4>Service 1</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -91,10 +93,12 @@
         <div class="col-4_sm-12 bg-white">
           <img src="" alt="case study image">
           <div>
-          <h4>Title of case study with awesome client.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h4>Title of case study with awesome client.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
-          <a href="#"><button class="button-main">get the case study</button></a>
+          <div class="text-center">
+            <a href="#"><button class="button-main transition-ease">get the case study</button></a>
+          </div>
         </div>
       </div>
     </section>
@@ -111,12 +115,12 @@
           <div class="grid-middle">
             <div class="col-1">
               <!-- this is the button or icon to click left to see previous testimonial -->
-            <a href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i></button></a>
+            <a href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
             </div>
             <div class="col-8">
               <!-- this is the testimonial itself -->
-              <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</blockquote>
-              <p>- satisfied client #1</p>
+              <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              <p class="text-right">- satisfied client #1</p></blockquote>
             </div>
             <div class="col-1">
               <!-- this is the button or icon to click right to see next testimonial -->
@@ -152,7 +156,7 @@
               <label class="col-12" for="message">Message</label>
               <textarea name="message" id="message" placeholder=" Your message"></textarea>
             </div>
-            <button type="submit" required="true" class="button-main">send</button>
+            <button type="submit" required="true" class="button-main transition-ease">send</button>
           </form>
           <!-- this is the second form which will appear when the user toggles the button -->
           <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
@@ -199,38 +203,38 @@
               <label class="col-12" for="message">What else would you like to tell me?</label>
               <textarea class="col-12" name="message" id="message" placeholder=" Your message"></textarea>
             </div>
-            <button type="submit" class="button-main button-big">send project request</button>
+            <button type="submit" class="button-main button-big transition-ease">send project request</button>
           </form>
       </div>
     </section>
     <!-- this is my footer section which will be reused in jekyll -->
     <footer>
-      <div class="grid-middle">
+      <div class="bg-grey grid-top pad-footer">
         <div class="col-3_sm-12">
           <img src="images/lilybruns-headshot.jpeg" alt="lily bruns headshot">
         </div>
         <div class="col-5_sm-12">
-          <h6 class="footer-text">Lily Bruns is a blabbity blah blah blah.</h6>
-          <p class="footer-text">Just one conversation can be all you need to clarify your vision and get the direction you need to make your next step. Don't be shy, <a href="" class="footer-text">get in touch and let’s do great things together!</a></p>
+          <h6 class="footer-text text-white">Lily Bruns is a blabbity blah blah blah.</h6>
+          <p class="footer-text text-white">Just one conversation can be all you need to clarify your vision and get the direction you need to make your next step. Don't be shy, <a href="" class="footer-text">get in touch and let’s do great things together!</a></p>
         </div>
         <div class="col-4_sm-12">
-          <h6>EMAIL: <a href="mailto:theboss@knowitall.solutions">theboss@knowitall.solutions</a></h6>
-          <h6>PHONE: <a href="tel:+1-xxx-xxx-xxxx">+1 xxx-xxx-xxxx</a></h6>
-          <div class="grid-spaceAround">
-            <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-medium" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          <h6 class="text-white">EMAIL: <a href="mailto:theboss@knowitall.solutions">theboss@knowitall.solutions</a></h6>
+          <h6 class="text-white">PHONE: <a href="tel:+1-xxx-xxx-xxxx">+1 xxx-xxx-xxxx</a></h6>
+          <div class="pad-top-m">
+            <a href="" class="pad-right-s"><i class="fa fa-twitter text-white text-big" aria-hidden="true"></i></a>
+            <a href="" class="pad-right-s"><i class="fa fa-linkedin text-white text-big" aria-hidden="true"></i></a>
+            <a href="" class="pad-right-s"><i class="fa fa-medium text-white text-big" aria-hidden="true"></i></a>
+            <a href="" class="pad-right-s"><i class="fa fa-envelope-o text-white text-big" aria-hidden="true"></i></a>
           </div>
         </div>
         <div class="col-12">
-          <p class="footer-text"><i class="fa fa-copyright" aria-hidden="true"></i> Copyright Lily Bruns 2017</p>
+          <h3 class="footer-text text-center text-white"><i class="fa fa-copyright text-white" aria-hidden="true"></i> Copyright Lily Bruns 2017</h3>
         </div>
       </div>
       <!-- this is the sign-up form -->
-      <div class="grid">
+      <div class="grid bg-bright pad-footer">
         <div class="col-4_sm-12">
-          <h4>Sign up for updates <i class="fa fa-arrow-right" aria-hidden="true"></i></h4>
+          <h4>Sign up for updates <i class="fa fa-arrow-right text-dark" aria-hidden="true"></i></h4>
         </div class="col-8_sm-12">
         <!-- embed sign-up form below -->
         <div>
