--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <!-- these are style links which will be reused in jekyll -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto|Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto:300,400|Roboto+Slab" rel="stylesheet">
   <script src="https://use.fontawesome.com/97eb518d07.js"></script>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
