--- a/landingpage.html
+++ b/landingpage.html
@@ -34,17 +34,17 @@
         </div>
         <div class="col-6_sm-12 bg-bright">
           <h5 class="text-center">download the case study</h5>
-          <form class="grid-spaceAround  pad-all-s" method="POST" action="http://formspree.io/busababruns@gmail.com">
+          <form class="grid-spaceAround  pad-form" method="POST" action="http://formspree.io/busababruns@gmail.com">
             <div class="col-6_sm-12 grid">
-              <label class="col-12" for="name">First Name</label>
+              <label for="name">First Name</label>
               <input type="text" name="firstname" id="name" placeholder=" Harry">
             </div>
             <div class="col-6_sm-12 grid">
-              <label class="col-12" for="name">Last Name</label>
+              <label for="name">Last Name</label>
               <input type="text" name="lastname" id="name" placeholder=" Potter">
             </div>
             <div class="col-12 grid">
-              <label class="col-12" for="email">Email</label>
+              <label for="email">Email</label>
               <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
             </div>
             <a href=""><button type="submit" class="button-dark">get the pdf</button></a>
