--- a/landingpage.html
+++ b/landingpage.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-  <head>
-    <title>knowitall solutions - case study</title>
-    <!-- these are style links which will be reused in jekyll -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto|Roboto+Slab:300,400" rel="stylesheet">
-    <script src="https://use.fontawesome.com/97eb518d07.js"></script>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <body>
-    <!-- this is my landing page header and simplified nav which will be reused in jekyll -->
-    <header>
-      <nav class="grid-spaceBetween-middle bg-white">
-        <div class="col-2_sm-12 text-center">
-          <img src"" alt="knowitall logo">
-        </div>
-        <div class="col-1_sm-12 text-center">
-          <a href="#contact">contact</a>
-        </div>
-      </nav>
-    </header>
+---
+layout: default-lp
+title: knowitall solutions - case study
+---
+
+
     <section>
       <h1>Title of case study with awesome client</h1>
       <div class="grid">
@@ -52,5 +35,3 @@
         </div>
       </div>
     </section>
-
-  </body>
