--- a/services.html
+++ b/services.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<head>
-  <title>knowitall solutions - services</title>
-  <!-- these are style links which will be reused in jekyll -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto:300,400|Roboto+Slab" rel="stylesheet">
-  <script src="https://use.fontawesome.com/97eb518d07.js"></script>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-  <body>
+---
+layout: default
+title: knowitall services
+---
+
     <section class="pad-top-m">
       <h1 class="text-big">Services</h1>
       <!-- this is the container for the service previews -->
@@ -49,3 +42,4 @@
       <h2 class="text-medium">Not quite ready to make a commitment?</h2>
       <p>That’s ok, let’s get to know each other first. You can find tons of useful (and FREE) resources in the blog.</p>
       <a href=""><button class="button-main">learn for free</button></a>
+    </section>
